--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,115 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  background-color: var(--bg-color);
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-block-size: 100vh;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  padding: 10px;
+  color: var(--color-text-two);
+  min-block-size: 100vh;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 100px;
+  width: 25px;
+  height: 25px;
+  border-inline-end: 1px solid currentColor;
+  border-block-start: 1px solid currentColor;
+  inset-inline-end: 10px;
+  inset-block-start: 10px;
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-inline-start: 1px solid currentColor;
+  border-block-end: 1px solid currentColor;
+  inset-block-end: 10px;
+  inset-inline-start: 10px;
+}
+
+.header__decorated-inscription {
+  position: absolute;
+  justify-self: end;
+  inset-block-start: 10px;
+  inset-inline-end: 38px;
+}
+
+.rec {
+  position: relative;
+  color: inherit;
+  text-transform: uppercase;
+}
+
+
+.rec::after {
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px currentColor;
+  background-color: var(--accent-color);
+  inset-block-start: 7px;
+  inset-inline-end: -19px;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  border: none;
+  padding: 1.5px 13px;
+  color: inherit;
+  text-transform: lowercase;;
+  background-color: transparent;
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid currentColor;
+}
+
+.header__title {
+  color: var(--color-title);
+  font-weight: 700;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 83%;
+  text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.header__subtitle  {
+  align-self: center;
+  inline-size: 100%;
+  min-block-size: 71px;
+  max-block-size: 117px;
+}
+
+.title-decor {
+  color: var(--color-subtitle);
+  font-weight: 700;
+  font-size: 18px;
+  background-color: var(--bg-color-subtitle);
 }
