--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,6 @@
   --bg-color-subtitle: #FF0070;
   --color-title: #DB00FF;
   --accent-color: #FF0070;
+  --display-element: block;
+  --color-hover-button: rgba(255, 0, 112, 0.4);
 }
