--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,29 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-light);
+  --bg-color: #FFF1F7;
+  --color-text-one: #353430;
+  --color-text-two: #353430;
+  --color-subtitle: #353430;
+  --bg-color-subtitle: #FF8DCB;
+  --color-title: #FFC2E6;
+  --accent-color: #FF8DCB;
+  --display-element: none;
+  --color-hover-button: rgba(50, 49, 45, 0.4);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-image: url(../images/cover-image-light);
+    --bg-color: #FFF1F7;
+    --color-text-one: #353430;
+    --color-text-two: #353430;
+    --color-subtitle: #353430;
+    --bg-color-subtitle: #FF8DCB;
+    --color-title: #FFC2E6;
+    --accent-color: #FF8DCB;
+    --display-element: none;
+    --color-hover-button: rgba(50, 49, 45, 0.4);
+  }
 }
