--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --bg-image: url(../images/cover-image-light);
+  --bg-image: url(../images/cover-image-light.png);
   --bg-color: #FFF1F7;
   --color-text-one: #353430;
   --color-text-two: #353430;
@@ -23,7 +23,7 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --bg-image: url(../images/cover-image-light);
+    --bg-image: url(../images/cover-image-light.png);
     --bg-color: #FFF1F7;
     --color-text-one: #353430;
     --color-text-two: #353430;
