Исправлена ошибка при наведении кнопки в тёмной теме

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -18,5 +18,5 @@
   --color-title: #DB00FF;
   --accent-color: #FF0070;
   --display-element: block;
-  --color-hover-button: rgba(rgba(255, 0, 112, 0.4));
+  --color-hover-button: rgba(255, 0, 112, 0.4);
 }
